removed mocktail dependencies